--- a/KFC.html
+++ b/KFC.html
@@ -17,7 +17,7 @@
 					</font>
 					</td>
 					<td width="40%">&nbsp;</td>
-					<td><a href="Index.html">						
+					<td><a href="index.html">						
 							<font face="lato" color="#8B0000" size="4">
 						HOME</font></a>						
 					</td>
